Bug 165321 - Missing call-out shapes
Summary: Missing call-out shapes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords: bibisected, bisected, filter:pptx, regression
: 165323 165326 (view as bug list)
Depends on:
Blocks: Shapes
  Show dependency treegraph
 
Reported: 2025-02-18 18:44 UTC by Justin L
Modified: 2025-11-19 18:31 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
tdf35931-4.pptx_mso.pdf: how it looks in PowerPoint 2019 - focus on purple call-outs (145.47 KB, application/pdf)
2025-02-18 18:44 UTC, Justin L
Details
Minimized example file with MSO 2010, only two pink shapes grouped (39.80 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-03-05 10:20 UTC, Gabor Kelemen (Collabora)
Details
How it looks in MSO and LO master (117.62 KB, image/png)
2025-03-05 10:22 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-02-18 18:44:17 UTC
Created attachment 199290 [details]
tdf35931-4.pptx_mso.pdf: how it looks in PowerPoint 2019 - focus on purple call-outs

The two purple shapes are missing now.

They were there until 25.2 commit ebf13e890766f4cadbba81444784cfe3c8e1bbc3
Author: Balazs Varga on Thu Aug 8 10:18:24 2024 +0200
    tdf#156857: sd ooxml import: fix shape size if spAutofit is set


Steps to reproduce:
1.) open attachment 127991 [details] from bug 35931 (12 - La caisse slide16 converted to SmartArt graphic with MSO 2010.pptx)

Notice that the 2 purple call-out shapes are missing - only the text is provided. (Also now missing in Powerpoint after round-tripped by LO.)

Found by Collabora's mso-test
Comment 1 Justin L 2025-02-21 13:36:52 UTC
confirmed that the issue is still seen on master.
Comment 2 BogdanB 2025-02-22 05:17:15 UTC
The shapes are missing just visually, the shapes are there, if I click on them and  change their area color they became visible again.
Comment 3 Gabor Kelemen (Collabora) 2025-03-05 10:20:43 UTC
Created attachment 199614 [details]
Minimized example file with MSO 2010, only two pink shapes grouped

This is the most minimal version of the file, only 2 shapes grouped. Looks like there is a 1px thick pink line instead of the fill, after the bibisected change.
Comment 4 Gabor Kelemen (Collabora) 2025-03-05 10:22:24 UTC
Created attachment 199615 [details]
How it looks in MSO and LO master
Comment 5 Gabor Kelemen (Collabora) 2025-03-06 07:56:54 UTC
*** Bug 165326 has been marked as a duplicate of this bug. ***
Comment 6 Balázs Varga 2025-03-06 15:52:23 UTC
*** Bug 165323 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2025-03-07 16:41:56 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/620b89adea77519fd5d057cac7e1acf8a6fb2544

tdf#165321 - sd ooxml import fix missing shapes or shapes with near

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Gerald Pfeifer 2025-03-10 13:40:45 UTC
I verified the reported issue with

  Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 894563ee0e4032019623a97c313af3d833863b1f
  CPU threads: 12; OS: Linux 6.13; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

and verified the fix with last nights daily build

  Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 8e2effa8955db4dc4b31145fbb14b53636b32186
  CPU threads: 12; OS: Linux 6.13; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US


I also verified bug #165326 which was duplicated to this.

And Justin verified bug #165323 which was duplicated to this and 
all files there.
Comment 9 Commit Notification 2025-03-20 09:28:22 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/89d9c6b41a084e99ef705bf5af39b621d392c435

tdf#165321 - sd ooxml import fix missing shapes or shapes with near

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.