tdf#165321 - sd ooxml import fix missing shapes or shapes with near

zero height

Use the calculated shapes size (before we calculate the shape size with
NbcAdjustTextFrameWidthAndHeight if the autoTextGrowHeight is true) instead of the shape size directly from the xml, which need to be transformed in some cases.

Regression from commit: ebf13e890766f4cadbba81444784cfe3c8e1bbc3
(tdf#156857: sd ooxml import: fix shape size if spAutofit is set)

Change-Id: Icddaf22d10a89b172a3f1ca3e55150162e51a877
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182581
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>